# BEC

./: .gitignore  ;  LICENSE  Makefile  README.md  emissions.py  pyproject.toml  setup.py
bec/: __init__.py  simulation.py  units.py
bec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bec/analysis/: stirap_adiabatic.py
bec/channel/: README.md  __init__.py  builders.py  factory.py  general.py  io.py  kraus.py  propagator.py  reductions.py
bec/core/: base_model.py  units.py
bec/errors/: coherence.py  log_negativity.py  two_photon_metrics.py
bec/helpers/: __init__.py  converter.py  decay.py  eneries.py  pprint.py
bec/light/: REDAME.md  __init__.py  base.py  classical.py  detuning.py  envelopes.py  light_mode.py  lightmode_photon_weave.py  lightmode_qutip.py
bec/metrics/: __init__.py  bell.py  decompose.py  entanglement.py  linops.py  (+5 more)
examples/: bichromatic_excitation.py  biexciton_source.npz  chirp_comparison.py  chirped.py  demo_drive_decode.py  derived.py  dressing_factor.ipynb  envelopes_testing.py  example_1.py  example_2.py  long_chirped_pulse.py  new_polarization_test.py  new_polarization_test_fss.py  output.txt  phonon_test.py  populations.py  qd_decay.py  qd_testing.py  qdot_dirve_decode_compile.py  s_classical_drive.py  s_decay.py  simple.py  simple_gaussian.py  simple_symbolic.py  simple_tabulated.py  testing_polarization.py
old_examples/: Untitled.ipynb  bichromatic_excitation.py  chirp_comparison.py  chirped.py  long_chirped_pulse.py  new_polarization_test.py  new_polarization_test_fss.py  phonon_example.py  phonon_test.py  qdot_dirve_decode_compile.py  testing_polarization.py
old_examples /: Untitled.ipynb  bichromatic_excitation.py  chirped.py  drive_reports.py  new_polarization_test.py  new_polarization_test_fss.py  phonon_example.py  phonon_test.py  qdot_dirve_decode_compile.py
qsi/: README.md  helpers.py  qd_source.py
tools/: handover_keyfiles.txt
(+368 files in other folders)
