[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bec"
version = "0.1.0"
description = "Quantum dot + light simulation toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Simon Sekavcnik, Paul Kohl, Janis Nötzel" }]

dependencies = [
  "numpy>=2.0",
  "scipy>=1.12",
  "qutip>=5.2",
  "photon_weave>=0.1.8",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "pytest>=8.0",
  "qsi @ git+https://github.com/tqsd/special_issue_quantum.git@5931b967e2fa4dbc28201c9480c02554e4a9f81b",
]

[tool.black]
line-length = 80

[tool.flake8]
max-line-length = 80

[tool.isort]
line_length = 80
profile = "black"
