[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bec"
version = "0.1.0"
description = "Quantum dot + light simulation toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Simon Sekavcnik, Paul Kohl, Janis Nötzel" }]

dependencies = [
  "numpy>=2.0",
  "scipy>=1.12",
  "qutip>=5.2",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "pytest>=8.0",
  "qsi @ git+https://github.com/tqsd/special_issue_quantum.git@5931b967e2fa4dbc28201c9480c02554e4a9f81b",
  "standardized-master-equation-framework @ git+https://github.com/tqsd/Standardized-Master-Equation-Framework.git@v0.0.3",
  "rich==14.3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "import-linter>=2.0",
  "black",
  "flake8",
  "isort",
  "ruff"
]

[tool.black]
line-length = 80

[tool.flake8]
max-line-length = 80

[tool.isort]
line_length = 80
profile = "black"


[tool.ruff]
line-length = 80
select = ["E", "F", "I", "UP"]
fix = true

[tool.ruff.format]
quote-style = "double"
